--- a/css/main.css
+++ b/css/main.css
@@ -1100,7 +1100,7 @@ ul {
           transform: translateY(0);
 }
 
-.galery-set__name {
+.galery-item-name {
   padding-top: 20px;
   padding-bottom: 20px;
   padding-right: 24px;
