--- a/sass/components/_galery-set.scss
+++ b/sass/components/_galery-set.scss
@@ -47,7 +47,7 @@
 .galery-set__link:focus .galery-set__text {
   transform: translateY(0);
 }
-.galery-set__name {
+.galery-set__wraper {
   padding-top: 20px;
   padding-bottom: 20px;
   padding-right: 24px;
