--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,4 @@
-.contacts-set__link {
+.navigation-set__link, .contacts-set__link {
   width: 100%;
   padding-top: 32px;
   padding-bottom: 32px;
@@ -78,15 +78,22 @@ ul {
 }
 
 .container {
+  max-width: 1200px;
   padding-left: 15px;
   padding-right: 15px;
   margin-left: auto;
   margin-right: auto;
 }
 
+@media screen and (min-width: 480px) {
+  .container {
+    width: 480px;
+  }
+}
+
 .section {
-  padding-top: 94px;
-  padding-bottom: 94px;
+  padding-top: 60px;
+  padding-bottom: 60px;
 }
 
 .section__title {
@@ -109,57 +116,38 @@ ul {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
-  height: 60px;
-  margin-left: auto;
-  margin-right: auto;
-  padding-left: 15px;
-  padding-right: 15px;
-  padding-top: 16px;
-  padding-bottom: 16px;
-}
-
-@media screen and (min-width: 480px) {
-  .header__container {
-    width: 480px;
-  }
-}
-
-.menu--button {
-  display: -webkit-inline-box;
-  display: -ms-inline-flexbox;
-  display: inline-flex;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  border: none;
+  padding-left: 16px;
+  padding-right: 16px;
+  height: 60px;
+}
+
+.menu-button {
+  display: -webkit-inline-box;
+  display: -ms-inline-flexbox;
+  display: inline-flex;
   margin: 0;
   padding: 0;
+  border: none;
   background-color: transparent;
 }
 
-.navigation-wrap {
-  position: absolute;
-  top: 0;
-  left: 0;
+.navigation-set {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
 }
 
 .navigation-set__item:not(:first-child) {
-  margin-bottom: 32px;
+  margin-left: 50px;
 }
 
 .navigation-set__link {
-  font-style: normal;
-  font-weight: 500;
-  font-size: 40px;
-  line-height: 47px;
-  letter-spacing: 0.02em;
-  color: #212121;
   display: block;
   color: var(--text-second-color);
 }
