--- a/sass/components/_hero.scss
+++ b/sass/components/_hero.scss
@@ -1,26 +1,30 @@
 .hero {
-  max-width: 1600px;
-  padding: 200px 0;
+  padding-top: 118px;
+  padding-bottom: 118px;
   margin-left: auto;
   margin-right: auto;
   background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
-    url(../images/background-heder.jpg);
+    url(../../images/background-heder-480-1x.jpg);
   background-repeat: no-repeat;
-  background-size: 1600px;
+  background-size: cover;
   background-position: 50% 50%;
 }
 .hero__title {
-  width: 700px;
   margin-bottom: 30px;
   margin-left: auto;
   margin-right: auto;
   font-weight: 900;
-  font-size: 44px;
-  line-height: 1.36;
+  font-size: 26px;
+  line-height: 1.62;
   text-align: center;
   letter-spacing: 0.06em;
   text-transform: uppercase;
   color: var(--header-hero-color);
+
+  @media (min-width: 480px) {
+    width: 360px;
+    height: 84px;
+  }
 }
 .hero__button {
   display: block;
