--- a/css/main.css
+++ b/css/main.css
@@ -78,17 +78,10 @@ ul {
 }
 
 .container {
-  max-width: 1200px;
   padding-left: 15px;
   padding-right: 15px;
   margin-left: auto;
   margin-right: auto;
-}
-
-@media screen and (min-width: 480px) {
-  .container {
-    width: 480px;
-  }
 }
 
 .section {
@@ -122,9 +115,34 @@ ul {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  padding-left: 16px;
-  padding-right: 16px;
   height: 60px;
+  padding-right: 15px;
+  padding-left: 15px;
+  padding-top: 16px;
+  padding-bottom: 16px;
+  margin-right: auto;
+  margin-left: auto;
+}
+
+@media screen and (min-width: 480px) {
+  .header__container {
+    width: 480px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .header__container {
+    width: 768px;
+    height: 80px;
+    padding-top: 26px;
+    padding-bottom: 26px;
+  }
+}
+
+@media screen and (min-width: 1600px) {
+  .header__container {
+    width: 1600px;
+  }
 }
 
 .menu-button {
@@ -135,6 +153,12 @@ ul {
   padding: 0;
   border: none;
   background-color: transparent;
+}
+
+@media screen and (min-width: 768px) {
+  .menu-button {
+    display: none;
+  }
 }
 
 .navigation-set {
@@ -235,29 +259,35 @@ ul {
 }
 
 .hero {
-  max-width: 1600px;
-  padding: 200px 0;
+  padding-top: 118px;
+  padding-bottom: 118px;
   margin-left: auto;
   margin-right: auto;
-  background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url(../images/background-heder.jpg);
-  background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/background-heder.jpg);
+  background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url(../images/ba);
+  background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/ba);
   background-repeat: no-repeat;
-  background-size: 1600px;
+  background-size: cover;
   background-position: 50% 50%;
 }
 
 .hero__title {
-  width: 700px;
   margin-bottom: 30px;
   margin-left: auto;
   margin-right: auto;
   font-weight: 900;
-  font-size: 44px;
-  line-height: 1.36;
+  font-size: 26px;
+  line-height: 1.62;
   text-align: center;
   letter-spacing: 0.06em;
   text-transform: uppercase;
   color: var(--header-hero-color);
+}
+
+@media (min-width: 480px) {
+  .hero__title {
+    width: 360px;
+    height: 84px;
+  }
 }
 
 .hero__button {
