--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -6,11 +6,25 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding-left: 16px;
-  padding-right: 16px;
   height: 60px;
+  padding-right: 15px;
+  padding-left: 15px;
+  padding-top: 16px;
+  padding-bottom: 16px;
+  margin-right: auto;
+  margin-left: auto;
 
   @media screen and (min-width: 480px) {
+    width: 480px;
+  }
+  @media screen and (min-width: 768px) {
+    width: 768px;
+    height: 80px;
+    padding-top: 26px;
+    padding-bottom: 26px;
+  }
+  @media screen and (min-width: 1600px) {
+    width: 1600px;
   }
 }
 .menu-button {
@@ -19,4 +33,8 @@
   padding: 0;
   border: none;
   background-color: transparent;
+
+  @media screen and (min-width: 768px) {
+    display: none;
+  }
 }
