--- a/sass/components/_hero.scss
+++ b/sass/components/_hero.scss
@@ -8,6 +8,21 @@
   background-repeat: no-repeat;
   background-size: cover;
   background-position: 50% 50%;
+
+  @media (min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
+    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
+      url(../../images/background-heder-480-2x.jpg);
+  }
+
+  @media screen and (min-width: 768px) {
+    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
+      url(../../images/background-heder-768-1x.jpg);
+
+    @media (min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
+      background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
+        url(../../images/background-heder-768-2x.jpg);
+    }
+  }
 }
 .hero__title {
   margin-bottom: 30px;
