--- a/sass/components/_advantages-set.scss
+++ b/sass/components/_advantages-set.scss
@@ -1,8 +1,18 @@
 .advantages-set {
-  @extend %set;
+  // @extend %set;
+  margin-right: auto;
+  margin-left: auto;
+
+  @media screen and (min-width: 480px) {
+    width: 480px;
+  }
+
+  @media screen and (min-width: 768px) {
+    width: 768px;
+  }
 }
 .advantages-set__item {
-  @extend %set-item;
+  // @extend %set-item;
 }
 .advantages__container-icon {
   height: 120px;
