--- a/css/main.css
+++ b/css/main.css
@@ -11,18 +11,12 @@
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.our-work-set, .our-team-set {
+.our-work-set {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   margin: 0;
   margin-right: -30px;
-}
-
-.our-team-set__item {
-  -ms-flex-preferred-size: calc(100% / 4 - 30px);
-      flex-basis: calc(100% / 4 - 30px);
-  margin-right: 30px;
 }
 
 :root {
@@ -96,15 +90,22 @@ ul {
   }
 }
 
-@media screen and (min-width: 1600px) {
+@media screen and (min-width: 1200px) {
   .container {
-    width: 1600px;
+    width: 1200px;
   }
 }
 
 .section {
   padding-top: 60px;
   padding-bottom: 60px;
+}
+
+@media screen and (min-width: 1600px) {
+  .section {
+    padding-top: 94px;
+    padding-bottom: 94px;
+  }
 }
 
 .section__title {
@@ -140,7 +141,6 @@ ul {
 
 @media screen and (min-width: 768px) {
   .header__container {
-    width: 768px;
     height: 80px;
     padding-top: 26px;
     padding-bottom: 26px;
@@ -293,14 +293,15 @@ ul {
   }
 }
 
-@media screen and (min-width: 1600px) {
+@media screen and (min-width: 1200px) {
   .hero {
+    width: 100%;
     background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url(../../images/background-heder-1600-1x.jpg);
     background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../../images/background-heder-1600-1x.jpg);
   }
 }
 
-@media screen and (min-width: 1600px) and (min-device-pixel-ratio: 2), screen and (min-width: 1600px) and (-webkit-min-device-pixel-ratio: 2), screen and (min-width: 1600px) and (min-resolution: 192dpi), screen and (min-width: 1600px) and (min-resolution: 2dppx) {
+@media screen and (min-width: 1200px) and (min-device-pixel-ratio: 2), screen and (min-width: 1200px) and (-webkit-min-device-pixel-ratio: 2), screen and (min-width: 1200px) and (min-resolution: 192dpi), screen and (min-width: 1200px) and (min-resolution: 2dppx) {
   .hero {
     background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url(../../images/background-heder-1600-2x.jpg);
     background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../../images/background-heder-1600-2x.jpg);
@@ -363,7 +364,6 @@ ul {
     -webkit-box-pack: center;
         -ms-flex-pack: center;
             justify-content: center;
-    text-align: center;
   }
 }
 
@@ -376,6 +376,13 @@ ul {
     -ms-flex-preferred-size: calc((100% - 4 * 15px) / 2);
         flex-basis: calc((100% - 4 * 15px) / 2);
     margin: 15px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .advantages-set__item {
+    -ms-flex-preferred-size: calc((100% - 8 * 15px) / 4);
+        flex-basis: calc((100% - 8 * 15px) / 4);
   }
 }
 
@@ -409,6 +416,16 @@ ul {
   font-size: 14px;
   line-height: 1.71;
   letter-spacing: 0.03em;
+}
+
+.display {
+  display: none;
+}
+
+@media screen and (min-width: 1200px) {
+  .display {
+    display: block;
+  }
 }
 
 .section--padding {
@@ -446,8 +463,12 @@ ul {
   background-color: rgba(47, 48, 58, 0.8);
 }
 
-.section--bg-color {
+.container--bg-color {
   background-color: var(--advantages-our-team-color);
+}
+
+.container--padding {
+  padding-top: 60px;
 }
 
 .our-team-set__item {
