--- a/sass/components/_advantages-set.scss
+++ b/sass/components/_advantages-set.scss
@@ -9,7 +9,6 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-    text-align: center;
   }
 }
 .advantages-set__item {
@@ -21,7 +20,8 @@
     margin: 15px;
   }
 
-  @media screen and (min-width: 1600px) {
+  @media screen and (min-width: 1200px) {
+    flex-basis: calc((100% - 8 * 15px) / 4);
   }
 }
 .advantages__container-icon {
