--- a/sass/components/_our-work-set.scss
+++ b/sass/components/_our-work-set.scss
@@ -1,3 +1,10 @@
+.display {
+  display: none;
+
+  @media screen and (min-width: 1200px) {
+    display: block;
+  }
+}
 .section--padding {
   padding-top: 0;
 }
