--- a/css/main.css
+++ b/css/main.css
@@ -478,6 +478,25 @@ ul {
   border-radius: 0px 0px 4px 4px;
 }
 
+@media screen and (min-width: 480px) {
+  .our-team-set__thumb {
+    width: 450px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .our-team-set__thumb {
+    width: 354px;
+    height: 374px;
+  }
+}
+
+.our-team-set__img {
+  display: block;
+  max-width: 100%;
+  height: 100%;
+}
+
 .our-team-set__wrap {
   padding-top: 30px;
   padding-bottom: 30px;
