--- a/sass/components/_our-team-set.scss
+++ b/sass/components/_our-team-set.scss
@@ -14,6 +14,21 @@
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
 }
+.our-team-set__thumb {
+  @media screen and (min-width: 480px) {
+    width: 450px;
+  }
+
+  @media screen and (min-width: 768px) {
+    width: 354px;
+    height: 374px;
+  }
+}
+.our-team-set__img {
+  display: block;
+  max-width: 100%;
+  height: 100%;
+}
 .our-team-set__wrap {
   padding-top: 30px;
   padding-bottom: 30px;
