--- a/css/main.css
+++ b/css/main.css
@@ -471,15 +471,45 @@ ul {
   padding-top: 60px;
 }
 
+@media screen and (min-width: 768px) {
+  .our-team-set {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    margin-right: -30px;
+    margin-bottom: -30px;
+  }
+}
+
 .our-team-set__item {
+  margin-bottom: 30px;
   background: var(--header-hero-color);
   -webkit-box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
           box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
 }
 
-.our-team-set__img {
-  display: block;
+@media screen and (min-width: 480px) {
+  .our-team-set__item {
+    width: 450px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .our-team-set__item {
+    width: 354px;
+    margin-right: 30px;
+    -ms-flex-preferred-size: calc((100%- 2 * 30px) / 2);
+        flex-basis: calc((100%- 2 * 30px) / 2);
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .our-team-set__item {
+    width: 270px;
+  }
 }
 
 .our-team-set__wrap {
