--- a/sass/components/_our-team-set.scss
+++ b/sass/components/_our-team-set.scss
@@ -6,26 +6,34 @@
 }
 .our-team-set {
   // @extend %set;
+  @media screen and (min-width: 768px) {
+    display: flex;
+    flex-wrap: wrap;
+    margin-right: -30px;
+    margin-bottom: -30px;
+  }
 }
 .our-team-set__item {
   // @extend %set-item;
+  margin-bottom: 30px;
   background: var(--header-hero-color);
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
-}
-// .our-team-set__thumb {
-//   @media screen and (min-width: 480px) {
-//     width: 450px;
-//   }
 
-//   @media screen and (min-width: 768px) {
-//     width: 354px;
-//     height: 374px;
-//   }
-// }
-.our-team-set__img {
-  display: block;
+  @media screen and (min-width: 480px) {
+    width: 450px;
+  }
+
+  @media screen and (min-width: 768px) {
+    width: 354px;
+    margin-right: 30px;
+    flex-basis: calc((100%- 2 * 30px) / 2);
+  }
+
+  @media screen and (min-width: 1200px) {
+    width: 270px;
+  }
 }
 .our-team-set__wrap {
   padding-top: 30px;
