--- a/sass/main.scss
+++ b/sass/main.scss
@@ -6,6 +6,7 @@
 @import './components/container';
 @import './components/section';
 @import './components/section-title';
+@import './components/social-icons-set';
 
 /* index.html */
 
@@ -25,7 +26,6 @@
 
 // Footer
 @import './components/footer';
-@import './components/join-set';
 @import './components/sign-form';
 @import './components/backdrop';
 @import './components/modal';
