--- a/css/main.css
+++ b/css/main.css
@@ -11,14 +11,6 @@
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.our-work-set {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  margin: 0;
-  margin-right: -30px;
-}
-
 :root {
   --header-hero-color: #ffffff;
   --advantages-our-team-color: #f5f4fa;
@@ -109,13 +101,87 @@ ul {
 }
 
 .section__title {
-  margin-bottom: 50px;
+  margin-bottom: 30px;
   font-weight: 700;
-  font-size: 36px;
+  font-size: 28px;
   line-height: 1.17;
   text-align: center;
   letter-spacing: 0.03em;
   color: var(--text-second-color);
+}
+
+@media screen and (min-width: 1200px) {
+  .section__title {
+    margin-bottom: 50px;
+    font-size: 36px;
+  }
+}
+
+.social-icons-set {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.our-team-set__social-icons-set {
+  margin-top: 16px;
+}
+
+.join__social-icons-set {
+  margin-top: 20px;
+}
+
+.social-icons-set__item {
+  height: 44px;
+  width: 44px;
+}
+
+.social-icons-set__item + .social-icons-set__item {
+  margin-left: 10px;
+}
+
+.social-icons-set__link {
+  -webkit-transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  width: 100%;
+  height: 100%;
+  border-radius: 50%;
+}
+
+.social-icons-set__link:hover, .social-icons-set__link:focus {
+  background-color: var(--link-hover-color);
+}
+
+.social-icons-set__icon {
+  -webkit-transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  fill: currentColor;
+}
+
+.social-icons-set__link:hover .social-icons-set__icon,
+.social-icons-set__link:focus .social-icons-set__icon {
+  color: var(--text-fifth-color);
+}
+
+.social-icons-set__link--color {
+  color: var(--accent-link-color);
+}
+
+.social-icons-set__link--bg-color {
+  background-color: rgba(255, 255, 255, 0.1);
+  color: var(--text-fifth-color);
 }
 
 /* index.html */
@@ -410,6 +476,13 @@ ul {
   letter-spacing: 0.03em;
   text-transform: uppercase;
   color: var(--text-second-color);
+  text-align: center;
+}
+
+@media screen and (min-width: 768px) {
+  .advantages-set__title {
+    text-align: left;
+  }
 }
 
 .advantages-set__text {
@@ -432,11 +505,18 @@ ul {
   padding-top: 0;
 }
 
+.our-work-set {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  margin: -15px;
+}
+
 .our-work-set__item {
   position: relative;
   -ms-flex-preferred-size: calc(100% / 3 - 30px);
       flex-basis: calc(100% / 3 - 30px);
-  margin-right: 30px;
+  margin: 15px;
 }
 
 .our-work-set__lebel {
@@ -463,12 +543,8 @@ ul {
   background-color: rgba(47, 48, 58, 0.8);
 }
 
-.container--bg-color {
+.section--bg-color {
   background-color: var(--advantages-our-team-color);
-}
-
-.container--padding {
-  padding-top: 60px;
 }
 
 @media screen and (min-width: 768px) {
@@ -478,95 +554,27 @@ ul {
     display: flex;
     -ms-flex-wrap: wrap;
         flex-wrap: wrap;
-    margin-right: -30px;
-    margin-bottom: -30px;
+    margin: -15px;
   }
 }
 
 .our-team-set__item {
-  margin-bottom: 30px;
+  margin: 15px;
   background: var(--header-hero-color);
   -webkit-box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
           box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
 }
 
-@media screen and (min-width: 480px) {
-  .our-team-set__item {
-    width: 450px;
-  }
-}
-
-@media screen and (min-width: 768px) {
-  .our-team-set__item {
-    width: 354px;
-    margin-right: 30px;
-    -ms-flex-preferred-size: calc((100%- 2 * 30px) / 2);
-        flex-basis: calc((100%- 2 * 30px) / 2);
-  }
+.our-team-set__wrap {
+  padding-top: 30px;
+  padding-bottom: 24px;
 }
 
 @media screen and (min-width: 1200px) {
-  .our-team-set__item {
-    width: 270px;
+  .our-team-set__wrap {
+    padding-bottom: 30px;
   }
-}
-
-.our-team-set__wrap {
-  padding-top: 30px;
-  padding-bottom: 30px;
-}
-
-.social-icons-set {
-  margin-top: 16px;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-}
-
-.social-icons-set__item {
-  height: 44px;
-  width: 44px;
-}
-
-.social-icons-set__link {
-  -webkit-transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  width: 100%;
-  height: 100%;
-  border-radius: 50%;
-  color: var(--accent-link-color);
-}
-
-.social-icons-set__link:hover, .social-icons-set__link:focus {
-  background-color: var(--link-hover-color);
-}
-
-.social-icons-set__icon {
-  -webkit-transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  fill: currentColor;
-}
-
-.social-icons-set__link:hover .social-icons-set__icon,
-.social-icons-set__link:focus .social-icons-set__icon {
-  color: var(--text-fifth-color);
-}
-
-.social-icons-set__item + .social-icons-set__item {
-  margin-left: 10px;
 }
 
 .our-team-set__text {
@@ -588,16 +596,6 @@ ul {
   color: var(--text-second-color);
 }
 
-.section__title {
-  margin-bottom: 50px;
-  font-weight: 700;
-  font-size: 36px;
-  line-height: 1.17;
-  text-align: center;
-  letter-spacing: 0.03em;
-  color: var(--text-second-color);
-}
-
 .clients-set {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -608,15 +606,29 @@ ul {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  margin: -15px;
 }
 
 .clients-set__item {
-  width: 170px;
+  width: 210px;
   height: 92px;
+  margin: 15px;
 }
 
-.clients-set__item + .clients-set__item {
-  margin-left: 30px;
+@media screen and (min-width: 768px) {
+  .clients-set__item {
+    width: 226px;
+    height: 92px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .clients-set__item {
+    width: 170px;
+    height: 92px;
+  }
 }
 
 .clients-set__link {
@@ -653,36 +665,63 @@ ul {
   color: var(--link-hover-color);
 }
 
-.footer {
-  padding-top: 60px;
-  padding-bottom: 60px;
+.section--footer {
   background-color: var(--footer-hero-bg-color);
 }
 
-.footer__container {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: baseline;
-      -ms-flex-align: baseline;
-          align-items: baseline;
+.container--footer {
+  text-align: center;
 }
 
-.logo-address-container {
-  -webkit-box-flex: 1;
-      -ms-flex-positive: 1;
-          flex-grow: 1;
+@media screen and (min-width: 768px) {
+  .container--footer {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: baseline;
+        -ms-flex-align: baseline;
+            align-items: baseline;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    padding-left: 76px;
+    padding-right: 89px;
+  }
 }
 
-.address-set {
+@media screen and (min-width: 1200px) {
+  .container--footer {
+    padding-left: 15px;
+    padding-right: 15px;
+    text-align: left;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .logo-address-container {
+    margin-right: 165px;
+    margin-bottom: 60px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .logo-address-container {
+    margin-right: 70px;
+    margin-bottom: 0;
+  }
+}
+
+.address {
   margin-top: 20px;
 }
 
-.address-set__item:not(:first-child) {
-  margin-top: 9px;
+.address__item:not(:first-child) {
+  margin-top: 8px;
 }
 
-.address-set__link {
+.address__link {
   font-size: 14px;
   line-height: 1.71;
   letter-spacing: 0.03em;
@@ -695,16 +734,23 @@ ul {
   color: var(--text-first-color);
 }
 
-.address-set__link:hover, .address-set__link:focus {
+.address__link:hover, .address__link:focus {
   color: var(--text-third-color);
 }
 
-.address-set__link--accent {
+.address__link--accent {
   color: var(--text-fifth-color);
 }
 
 .join {
-  margin-left: 70px;
+  padding-top: 60px;
+  padding-bottom: 60px;
+}
+
+@media screen and (min-width: 768px) {
+  .join {
+    padding: 0;
+  }
 }
 
 .join__text {
@@ -717,67 +763,20 @@ ul {
   color: var(--text-fifth-color);
 }
 
-.join-set {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  margin-top: 20px;
-}
-
-.join-set__item {
-  height: 44px;
-  width: 44px;
-}
-
-.join-set__item + .join-set__item {
-  margin-left: 10px;
-}
-
-.join-set__link {
-  -webkit-transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  width: 100%;
-  height: 100%;
-  border-radius: 50%;
-  background-color: rgba(255, 255, 255, 0.1);
-  color: var(--text-fifth-color);
-}
-
-.join-set__link:hover, .join-set__link:focus {
-  background-color: var(--link-hover-color);
-}
-
-.join-set__icon {
-  fill: currentColor;
-}
-
-.join-set__link:hover .join-set__icon,
-.join-set__link:focus .join-set__icon {
-  color: var(--text-fifth-color);
-}
-
-.sign-form {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: end;
-      -ms-flex-align: end;
-          align-items: flex-end;
-  margin-left: 93px;
+@media screen and (min-width: 1200px) {
+  .sign-form {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: end;
+        -ms-flex-align: end;
+            align-items: flex-end;
+    margin-left: 93px;
+  }
 }
 
 .sign-form__label {
   width: 358px;
-  margin-right: 12px;
   font-weight: 700;
   font-size: 14px;
   line-height: 16px;
@@ -787,9 +786,11 @@ ul {
 }
 
 .sign-form__input {
-  width: 358px;
+  display: block;
   height: 50px;
   margin-top: 20px;
+  margin-right: auto;
+  margin-left: auto;
   padding-top: 15px;
   padding-bottom: 15px;
   padding-left: 16px;
@@ -801,6 +802,19 @@ ul {
   -webkit-filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
           filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
   border-radius: 4px;
+}
+
+@media screen and (min-width: 480px) {
+  .sign-form__input {
+    width: 450px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .sign-form__input {
+    width: 358px;
+    margin-right: 12px;
+  }
 }
 
 .sign-form__input::-webkit-input-placeholder {
@@ -860,11 +874,14 @@ ul {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   width: 200px;
   height: 50px;
   padding: 0;
   margin: 0;
-  padding-left: 29px;
+  margin-top: 20px;
   font-weight: 700;
   cursor: pointer;
   font-size: 16px;
@@ -877,6 +894,12 @@ ul {
   border: 0;
   border-radius: 4px;
   background-color: var(--link-hover-color);
+}
+
+@media screen and (min-width: 1200px) {
+  .sign-form__button {
+    margin: 0;
+  }
 }
 
 .sign-form__button-icon {
