--- a/sass/components/_clients-set.scss
+++ b/sass/components/_clients-set.scss
@@ -1,24 +1,25 @@
-.section__title {
-  margin-bottom: 50px;
-  font-weight: 700;
-  font-size: 36px;
-  line-height: 1.17;
-  text-align: center;
-  letter-spacing: 0.03em;
-  color: var(--text-second-color);
-}
 .clients-set {
   display: flex;
   justify-content: center;
   align-items: center;
+  flex-wrap: wrap;
+  margin: -15px;
 }
 .clients-set__item {
-  width: 170px;
+  width: 210px;
   height: 92px;
+  margin: 15px;
+
+  @media screen and (min-width: 768px) {
+    width: 226px;
+    height: 92px;
+  }
+  @media screen and (min-width: 1200px) {
+    width: 170px;
+    height: 92px;
+  }
 }
-.clients-set__item + .clients-set__item {
-  margin-left: 30px;
-}
+
 .clients-set__link {
   transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   display: flex;
