--- a/sass/components/_our-team-set.scss
+++ b/sass/components/_our-team-set.scss
@@ -1,79 +1,26 @@
-.container--bg-color {
+.section--bg-color {
   background-color: var(--advantages-our-team-color);
 }
-.container--padding {
-  padding-top: 60px;
-}
 .our-team-set {
-  // @extend %set;
   @media screen and (min-width: 768px) {
     display: flex;
     flex-wrap: wrap;
-    margin-right: -30px;
-    margin-bottom: -30px;
+    margin: -15px;
   }
 }
 .our-team-set__item {
-  // @extend %set-item;
-  margin-bottom: 30px;
+  margin: 15px;
   background: var(--header-hero-color);
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
-
-  @media screen and (min-width: 480px) {
-    width: 450px;
-  }
-
-  @media screen and (min-width: 768px) {
-    width: 354px;
-    margin-right: 30px;
-    flex-basis: calc((100%- 2 * 30px) / 2);
-  }
-
-  @media screen and (min-width: 1200px) {
-    width: 270px;
-  }
 }
 .our-team-set__wrap {
   padding-top: 30px;
-  padding-bottom: 30px;
-}
-.social-icons-set {
-  margin-top: 16px;
-  display: flex;
-  justify-content: center;
-}
-.social-icons-set__item {
-  height: 44px;
-  width: 44px;
-}
-.social-icons-set__link {
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 100%;
-  height: 100%;
-  border-radius: 50%;
-  color: var(--accent-link-color);
-
-  &:hover,
-  &:focus {
-    background-color: var(--link-hover-color);
+  padding-bottom: 24px;
+  @media screen and (min-width: 1200px) {
+    padding-bottom: 30px;
   }
-}
-.social-icons-set__icon {
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  fill: currentColor;
-
-  .social-icons-set__link:hover &,
-  .social-icons-set__link:focus & {
-    color: var(--text-fifth-color);
-  }
-}
-.social-icons-set__item + .social-icons-set__item {
-  margin-left: 10px;
 }
 .our-team-set__text {
   font-weight: 400;
