--- a/sass/components/_sign-form.scss
+++ b/sass/components/_sign-form.scss
@@ -1,11 +1,12 @@
 .sign-form {
-  display: flex;
-  align-items: flex-end;
-  margin-left: 93px;
+  @media screen and (min-width: 1200px) {
+    display: flex;
+    align-items: flex-end;
+    margin-left: 93px;
+  }
 }
 .sign-form__label {
   width: 358px;
-  margin-right: 12px;
   font-weight: 700;
   font-size: 14px;
   line-height: 16px;
@@ -14,9 +15,12 @@
   color: var(--text-fifth-color);
 }
 .sign-form__input {
-  width: 358px;
+  display: block;
+
   height: 50px;
   margin-top: 20px;
+  margin-right: auto;
+  margin-left: auto;
   padding-top: 15px;
   padding-bottom: 15px;
   padding-left: 16px;
@@ -26,6 +30,14 @@
   box-sizing: border-box;
   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
   border-radius: 4px;
+
+  @media screen and (min-width: 480px) {
+    width: 450px;
+  }
+  @media screen and (min-width: 1200px) {
+    width: 358px;
+    margin-right: 12px;
+  }
 
   &::placeholder {
     font-weight: 400;
@@ -41,11 +53,12 @@
 .sign-form__button {
   display: inline-flex;
   align-items: center;
+  justify-content: center;
   width: 200px;
   height: 50px;
   padding: 0;
   margin: 0;
-  padding-left: 29px;
+  margin-top: 20px;
   font-weight: 700;
   cursor: pointer;
   font-size: 16px;
@@ -57,6 +70,10 @@
   border: 0;
   border-radius: 4px;
   background-color: var(--link-hover-color);
+
+  @media screen and (min-width: 1200px) {
+    margin: 0;
+  }
 }
 .sign-form__button-icon {
   margin-left: 10px;
