--- a/sass/components/_callback-form.scss
+++ b/sass/components/_callback-form.scss
@@ -6,10 +6,14 @@
   margin-bottom: 12px;
   font-weight: 700;
   font-size: 20px;
-  line-height: 1.15;
+  line-height: 1.5;
   text-align: center;
   letter-spacing: 0.03em;
   color: var(--text-second-color);
+
+  @media screen and (min-width: 1200px) {
+    line-height: 1.15;
+  }
 }
 .callback-form__label {
   display: block;
@@ -38,7 +42,8 @@
   border: 0;
   padding: 0;
   padding-left: 42px;
-  width: 448px;
+  width: 100%;
+  // width: 448px;
   height: 40px;
   color: var(--text-first-color);
   border: 1px solid rgba(33, 33, 33, 0.2);
@@ -63,7 +68,8 @@
   padding-left: 16px;
   padding-top: 12px;
   padding-bottom: 12px;
-  width: 448px;
+  width: 100%;
+  // width: 448px;
   height: 120px;
   border: 1px solid rgba(33, 33, 33, 0.2);
   box-sizing: border-box;
@@ -104,11 +110,16 @@
   align-items: center;
   margin-top: 20px;
   font-weight: normal;
-  font-size: 14px;
-  line-height: 1.71;
+  font-size: 12px;
+  line-height: 1.17;
   letter-spacing: 0.03em;
   color: var(--text-first-color);
   cursor: pointer;
+
+  @media screen and (min-width: 1200px) {
+    font-size: 14px;
+    line-height: 1.71;
+  }
 }
 .callback-form__checkbox-icon {
   margin-right: 7px;
