--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -1,6 +1,6 @@
 .modal {
-  width: 528px;
-  height: 581px;
+  width: 93.75%;
+  // height: 609px;
   position: absolute;
   top: 50%;
   left: 50%;
@@ -9,6 +9,15 @@
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
+
+  @media screen and (min-width: 485px) {
+    width: 450px;
+  }
+
+  @media screen and (min-width: 1200px) {
+    width: 528px;
+    // height: 581px;
+  }
 }
 .modal__close-button {
   padding: 0;
