--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,4 @@
-.navigation-set__link, .contacts-set__link {
+.navigation-set__link {
   width: 100%;
   padding-top: 32px;
   padding-bottom: 32px;
@@ -203,6 +203,7 @@ ul {
   height: 60px;
   padding-top: 16px;
   padding-bottom: 16px;
+  padding-right: 23px;
 }
 
 @media screen and (min-width: 768px) {
@@ -210,6 +211,7 @@ ul {
     height: 80px;
     padding-top: 26px;
     padding-bottom: 26px;
+    padding-right: 15px;
   }
 }
 
@@ -218,6 +220,7 @@ ul {
   display: -ms-inline-flexbox;
   display: inline-flex;
   margin: 0;
+  margin-left: auto;
   padding: 0;
   border: none;
   background-color: transparent;
@@ -226,6 +229,23 @@ ul {
 @media screen and (min-width: 768px) {
   .menu-button {
     display: none;
+  }
+}
+
+.navigation {
+  display: none;
+}
+
+@media screen and (min-width: 768px) {
+  .navigation {
+    display: block;
+    margin-left: 88px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .navigation {
+    margin-left: 93px;
   }
 }
 
@@ -281,14 +301,41 @@ ul {
 }
 
 .contacts-set {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  margin-left: auto;
+  display: none;
 }
 
-.contacts-set__item:last-child {
-  margin-left: 50px;
+@media screen and (min-width: 768px) {
+  .contacts-set {
+    display: block;
+    margin-left: auto;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .contacts-set {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .contacts-set__item:last-child {
+    margin-top: 10px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .contacts-set__item {
+    padding-top: 32px;
+    padding-bottom: 32px;
+  }
+  .contacts-set__item:last-child {
+    margin-left: 30px;
+  }
 }
 
 .contacts-set__link {
@@ -298,6 +345,14 @@ ul {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  width: 100%;
+  text-decoration: none;
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.02em;
+  -webkit-transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   color: var(--text-first-color);
 }
 
@@ -361,7 +416,6 @@ ul {
 
 @media screen and (min-width: 1200px) {
   .hero {
-    width: 100%;
     background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url(../../images/background-heder-1600-1x.jpg);
     background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../../images/background-heder-1600-1x.jpg);
   }
@@ -547,6 +601,10 @@ ul {
   background-color: var(--advantages-our-team-color);
 }
 
+.our-team-set {
+  margin-bottom: -30px;
+}
+
 @media screen and (min-width: 768px) {
   .our-team-set {
     display: -webkit-box;
@@ -559,11 +617,17 @@ ul {
 }
 
 .our-team-set__item {
-  margin: 15px;
+  margin-bottom: 30px;
   background: var(--header-hero-color);
   -webkit-box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
           box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
+}
+
+@media screen and (min-width: 768px) {
+  .our-team-set__item {
+    margin: 15px;
+  }
 }
 
 .our-team-set__wrap {
