--- a/sass/components/_contacts.scss
+++ b/sass/components/_contacts.scss
@@ -1,14 +1,42 @@
 .contacts-set {
-  display: flex;
-  margin-left: auto;
+  display: none;
+
+  @media screen and (min-width: 768px) {
+    display: block;
+    margin-left: auto;
+  }
+
+  @media screen and (min-width: 1200px) {
+    display: flex;
+    align-items: center;
+  }
 }
-.contacts-set__item:last-child {
-  margin-left: 50px;
+.contacts-set__item {
+  @media screen and (min-width: 768px) {
+    &:last-child {
+      margin-top: 10px;
+    }
+  }
+
+  @media screen and (min-width: 1200px) {
+    padding-top: 32px;
+    padding-bottom: 32px;
+    &:last-child {
+      margin-left: 30px;
+    }
+  }
 }
 .contacts-set__link {
-  @extend %link-style;
   display: flex;
   align-items: center;
+  width: 100%;
+
+  text-decoration: none;
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.02em;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   color: var(--text-first-color);
 
   &:hover,
