--- a/sass/components/_navigation.scss
+++ b/sass/components/_navigation.scss
@@ -1,5 +1,14 @@
 .navigation {
-  // margin-left: 93px;
+  display: none;
+
+  @media screen and (min-width: 768px) {
+    display: block;
+    margin-left: 88px;
+  }
+
+  @media screen and (min-width: 1200px) {
+    margin-left: 93px;
+  }
 }
 .navigation-set {
   display: flex;
