--- a/sass/components/_our-team-set.scss
+++ b/sass/components/_our-team-set.scss
@@ -2,6 +2,7 @@
   background-color: var(--advantages-our-team-color);
 }
 .our-team-set {
+  margin-bottom: -30px;
   @media screen and (min-width: 768px) {
     display: flex;
     flex-wrap: wrap;
@@ -9,11 +10,15 @@
   }
 }
 .our-team-set__item {
-  margin: 15px;
+  margin-bottom: 30px;
   background: var(--header-hero-color);
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
+
+  @media screen and (min-width: 768px) {
+    margin: 15px;
+  }
 }
 .our-team-set__wrap {
   padding-top: 30px;
