--- a/sass/main.scss
+++ b/sass/main.scss
@@ -16,6 +16,7 @@
 @import './components/logo';
 @import './components/contacts';
 @import './components/current';
+@import './components/mobile-menu.scss';
 
 // Main
 @import './components/hero';
