--- a/css/main.css
+++ b/css/main.css
@@ -1,11 +1,7 @@
-.navigation-set__link {
+.navigation-set--flex__link, .navigation-set__link {
   width: 100%;
-  padding-top: 32px;
-  padding-bottom: 32px;
   text-decoration: none;
   font-weight: 500;
-  font-size: 14px;
-  line-height: 1.14;
   letter-spacing: 0.02em;
   -webkit-transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -249,22 +245,26 @@ ul {
   }
 }
 
-.navigation-set {
+.navigation-set-flex {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
 }
 
-.navigation-set__item:not(:first-child) {
+.navigation-set--flex__item:not(:first-child) {
   margin-left: 50px;
 }
 
-.navigation-set__link {
+.navigation-set--flex__link {
   display: block;
+  padding-top: 32px;
+  padding-bottom: 32px;
+  font-size: 14px;
+  line-height: 1.14;
   color: var(--text-second-color);
 }
 
-.navigation-set__link:hover, .navigation-set__link:focus {
+.navigation-set--flex__link:hover, .navigation-set--flex__link:focus {
   color: var(--text-third-color);
 }
 
@@ -365,12 +365,12 @@ ul {
   fill: currentColor;
 }
 
-.navigation-set__link--current {
+.navigation-set--flex__link--current {
   position: relative;
   color: var(--text-third-color);
 }
 
-.navigation-set__link--current::after {
+.navigation-set--flex__link--current::after {
   content: '';
   display: block;
   width: 100%;
@@ -379,6 +379,21 @@ ul {
   position: absolute;
   bottom: 0;
   border-radius: 2px;
+}
+
+.navigation-set__link {
+  display: block;
+  font-size: 40px;
+  line-height: 1.18;
+  color: var(--text-second-color);
+}
+
+.navigation-set__link:hover, .navigation-set__link:focus {
+  color: var(--text-third-color);
+}
+
+.navigation-set__link--current {
+  color: var(--text-third-color);
 }
 
 .hero {
