--- a/sass/components/_navigation.scss
+++ b/sass/components/_navigation.scss
@@ -1,4 +1,4 @@
-.navigation {
+.navigation-flex {
   display: none;
 
   @media screen and (min-width: 768px) {
@@ -14,10 +14,10 @@
   display: flex;
 }
 
-.navigation-set--flex__item:not(:first-child) {
+.navigation-set-flex__item:not(:first-child) {
   margin-left: 50px;
 }
-.navigation-set--flex__link {
+.navigation-set-flex__link {
   @extend %link-style;
   display: block;
   padding-top: 32px;
