--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -18,15 +18,28 @@
     padding-right: 15px;
   }
 }
-.menu-toggle {
+.menu-button {
   display: inline-flex;
+  align-items: center;
+  justify-content: center;
   margin: 0;
   margin-left: auto;
   padding: 0;
+  cursor: pointer;
   border: none;
+  outline: none;
   background-color: transparent;
+
+  &:hover,
+  &:focus {
+    color: var(--link-hover-color);
+  }
 
   @media screen and (min-width: 768px) {
     display: none;
   }
+}
+.menu-button__icon {
+  fill: currentColor;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
