--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,5 @@
-.navigation-set-flex__link, .navigation-set__link {
+@charset "UTF-8";
+.navigation-set-flex__link {
   width: 100%;
   text-decoration: none;
   font-weight: 500;
@@ -211,21 +212,39 @@ ul {
   }
 }
 
-.menu-toggle {
+.menu-button {
   display: -webkit-inline-box;
   display: -ms-inline-flexbox;
   display: inline-flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   margin: 0;
   margin-left: auto;
   padding: 0;
+  cursor: pointer;
   border: none;
+  outline: none;
   background-color: transparent;
 }
 
+.menu-button:hover, .menu-button:focus {
+  color: var(--link-hover-color);
+}
+
 @media screen and (min-width: 768px) {
-  .menu-toggle {
+  .menu-button {
     display: none;
   }
+}
+
+.menu-button__icon {
+  fill: currentColor;
+  -webkit-transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .navigation-flex {
@@ -262,6 +281,8 @@ ul {
   font-size: 14px;
   line-height: 1.14;
   color: var(--text-second-color);
+  -webkit-transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .navigation-set-flex__link:hover, .navigation-set-flex__link:focus {
@@ -300,19 +321,19 @@ ul {
   color: var(--text-third-color);
 }
 
-.contacts-set {
+.contacts-set-flex {
   display: none;
 }
 
 @media screen and (min-width: 768px) {
-  .contacts-set {
+  .contacts-set-flex {
     display: block;
     margin-left: auto;
   }
 }
 
 @media screen and (min-width: 1200px) {
-  .contacts-set {
+  .contacts-set-flex {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
@@ -323,23 +344,23 @@ ul {
 }
 
 @media screen and (min-width: 768px) {
-  .contacts-set__item:last-child {
+  .contacts-set-flex__item:last-child {
     margin-top: 10px;
   }
 }
 
 @media screen and (min-width: 1200px) {
-  .contacts-set__item {
+  .contacts-set-flex__item {
     padding-top: 32px;
     padding-bottom: 32px;
   }
-  .contacts-set__item:last-child {
+  .contacts-set-flex__item:last-child {
     margin-left: 30px;
     margin-top: 0;
   }
 }
 
-.contacts-set__link {
+.contacts-set-flex__link {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -357,11 +378,11 @@ ul {
   color: var(--text-first-color);
 }
 
-.contacts-set__link:hover, .contacts-set__link:focus {
+.contacts-set-flex__link:hover, .contacts-set-flex__link:focus {
   color: var(--text-third-color);
 }
 
-.contacts-set__icon {
+.contacts-set-flex__icon {
   margin-right: 10px;
   fill: currentColor;
 }
@@ -382,10 +403,68 @@ ul {
   border-radius: 2px;
 }
 
+.menu-container {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  padding: 48px 40px;
+  background-color: var(--header-hero-color);
+  z-index: 999;
+  -webkit-transform: translateX(100%);
+          transform: translateX(100%);
+  -webkit-transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.menu-container.is-open {
+  -webkit-transform: translateX(0);
+          transform: translateX(0);
+}
+
+.menu-toggle {
+  position: absolute;
+  top: 10px;
+  right: 15px;
+  display: -webkit-inline-box;
+  display: -ms-inline-flexbox;
+  display: inline-flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  margin: 0;
+  margin-left: auto;
+  padding: 0;
+  cursor: pointer;
+  border: none;
+  outline: none;
+  background-color: transparent;
+}
+
+.menu-toggle:hover, .menu-toggle:focus {
+  color: var(--link-hover-color);
+}
+
+/* Навигация */
+.navigation-set__item:nth-child(2) {
+  margin-top: 36px;
+  margin-bottom: 32px;
+}
+
 .navigation-set__link {
   display: block;
+  width: 100%;
+  text-decoration: none;
   font-size: 40px;
   line-height: 1.18;
+  font-weight: 500;
+  letter-spacing: 0.02em;
+  -webkit-transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   color: var(--text-second-color);
 }
 
@@ -397,26 +476,71 @@ ul {
   color: var(--text-third-color);
 }
 
-.menu-container {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100vw;
-  height: 100vh;
-  padding: 32px;
-  background-color: var(--header-hero-color);
-  z-index: 999;
-  -webkit-transform: translateX(100%);
-          transform: translateX(100%);
-  -webkit-transition: -webkit-transform 250ms ease-in-out;
-  transition: -webkit-transform 250ms ease-in-out;
-  transition: transform 250ms ease-in-out;
-  transition: transform 250ms ease-in-out, -webkit-transform 250ms ease-in-out;
+/* Контакты */
+.contacts-set {
+  margin-top: 306px;
+  margin-bottom: 64px;
 }
 
-.menu-container.is-open {
-  -webkit-transform: translateX(0);
-          transform: translateX(0);
+.contacts-set__item:first-child {
+  margin-bottom: 32px;
+}
+
+.contacts-set__link-tel {
+  display: block;
+  width: 100%;
+  text-decoration: none;
+  font-weight: 500;
+  font-size: 34px;
+  line-height: 1.18;
+  letter-spacing: 0.02em;
+  -webkit-transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  color: var(--text-third-color);
+}
+
+.contacts-set__link-tel:hover, .contacts-set__link-tel:focus {
+  color: var(--text-third-color);
+}
+
+.contacts-set__link-mail {
+  display: block;
+  width: 100%;
+  text-decoration: none;
+  font-weight: 500;
+  font-size: 24px;
+  line-height: 1.18;
+  letter-spacing: 0.02em;
+  -webkit-transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  color: var(--text-first-color);
+}
+
+.contacts-set__link-mail:hover, .contacts-set__link-mail:focus {
+  color: var(--text-third-color);
+}
+
+/* Соц сети */
+.social-mob {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.social-mob__item:not(:first-child) {
+  margin-left: 10px;
+  padding-left: 10px;
+  border-left: 1px solid rgba(33, 33, 33, 0.2);
+}
+
+.social-mob__link {
+  display: block;
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 1.22;
+  letter-spacing: 0.02em;
+  text-decoration: none;
+  color: var(--text-third-color);
 }
 
 .hero {
@@ -1314,10 +1438,20 @@ ul {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
   margin-bottom: 50px;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+}
+
+@media screen and (min-width: 768px) {
+  .exemples-set {
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
 }
 
 .exemples-set__item:not(:last-child) {
@@ -1355,22 +1489,28 @@ ul {
           box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
 }
 
-.galery-set {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
-  margin-right: -30px;
-  margin-top: -30px;
+@media screen and (min-width: 768px) {
+  .galery-set {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    margin: -15px;
+  }
 }
 
-.galery-set__item {
-  -ms-flex-preferred-size: calc(100% / 3 - 30px);
-      flex-basis: calc(100% / 3 - 30px);
-  margin-right: 30px;
-  margin-top: 30px;
-  background: #ffffff;
+.galery-set__item:not(:last-child) {
+  margin-bottom: 30px;
+}
+
+@media screen and (min-width: 768px) {
+  .galery-set__item {
+    -ms-flex-preferred-size: calc(100% / 3 - 30px);
+        flex-basis: calc(100% / 3 - 30px);
+    margin: 15px;
+    background: #ffffff;
+  }
 }
 
 .galery-set__link {
