--- a/sass/components/_galery-set.scss
+++ b/sass/components/_galery-set.scss
@@ -1,14 +1,19 @@
 .galery-set {
-  display: flex;
-  flex-wrap: wrap;
-  margin-right: -30px;
-  margin-top: -30px;
+  @media screen and (min-width: 768px) {
+    display: flex;
+    flex-wrap: wrap;
+    margin: -15px;
+  }
 }
 .galery-set__item {
-  flex-basis: calc(100% / 3 - 30px);
-  margin-right: 30px;
-  margin-top: 30px;
-  background: #ffffff;
+  &:not(:last-child) {
+    margin-bottom: 30px;
+  }
+  @media screen and (min-width: 768px) {
+    flex-basis: calc(100% / 3 - 30px);
+    margin: 15px;
+    background: #ffffff;
+  }
 }
 .galery-set__link {
   display: block;
