--- a/sass/components/_navigation.scss
+++ b/sass/components/_navigation.scss
@@ -25,6 +25,7 @@
   font-size: 14px;
   line-height: 1.14;
   color: var(--text-second-color);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
   &:hover,
   &:focus {
