--- a/sass/components/mobile-menu.scss
+++ b/sass/components/mobile-menu.scss
@@ -1,8 +1,55 @@
+.menu-container {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  padding: 48px 40px;
+  background-color: var(--header-hero-color);
+  z-index: 999;
+  transform: translateX(100%);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.menu-container.is-open {
+  transform: translateX(0);
+}
+.menu-toggle {
+  position: absolute;
+  top: 10px;
+  right: 15px;
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  margin: 0;
+  margin-left: auto;
+  padding: 0;
+  cursor: pointer;
+  border: none;
+  outline: none;
+  background-color: transparent;
+
+  &:hover,
+  &:focus {
+    color: var(--link-hover-color);
+  }
+}
+
+/* Навигация */
+.navigation-set__item {
+  &:nth-child(2) {
+    margin-top: 36px;
+    margin-bottom: 32px;
+  }
+}
 .navigation-set__link {
-  @extend %link-style;
   display: block;
+  width: 100%;
+  text-decoration: none;
   font-size: 40px;
   line-height: 1.18;
+  font-weight: 500;
+  letter-spacing: 0.02em;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   color: var(--text-second-color);
 
   &:hover,
@@ -13,18 +60,67 @@
 .navigation-set__link--current {
   color: var(--text-third-color);
 }
-.menu-container {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100vw;
-  height: 100vh;
-  padding: 32px;
-  background-color: var(--header-hero-color);
-  z-index: 999;
-  transform: translateX(100%);
-  transition: transform 250ms ease-in-out;
+
+/* Контакты */
+.contacts-set {
+  margin-top: 306px;
+  margin-bottom: 64px;
 }
-.menu-container.is-open {
-  transform: translateX(0);
+.contacts-set__item {
+  &:first-child {
+    margin-bottom: 32px;
+  }
+}
+.contacts-set__link-tel {
+  display: block;
+  width: 100%;
+  text-decoration: none;
+  font-weight: 500;
+  font-size: 34px;
+  line-height: 1.18;
+  letter-spacing: 0.02em;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  color: var(--text-third-color);
+
+  &:hover,
+  &:focus {
+    color: var(--text-third-color);
+  }
+}
+.contacts-set__link-mail {
+  display: block;
+  width: 100%;
+  text-decoration: none;
+  font-weight: 500;
+  font-size: 24px;
+  line-height: 1.18;
+  letter-spacing: 0.02em;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  color: var(--text-first-color);
+
+  &:hover,
+  &:focus {
+    color: var(--text-third-color);
+  }
+}
+
+/* Соц сети */
+.social-mob {
+  display: flex;
+}
+.social-mob__item {
+  &:not(:first-child) {
+    margin-left: 10px;
+    padding-left: 10px;
+    border-left: 1px solid rgba(33, 33, 33, 0.2);
+  }
+}
+.social-mob__link {
+  display: block;
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 1.22;
+  letter-spacing: 0.02em;
+  text-decoration: none;
+  color: var(--text-third-color);
 }
