--- a/sass/components/_galery-set.scss
+++ b/sass/components/_galery-set.scss
@@ -1,4 +1,5 @@
 .galery-set {
+  margin-bottom: -30px;
   @media screen and (min-width: 768px) {
     display: flex;
     flex-wrap: wrap;
@@ -6,13 +7,13 @@
   }
 }
 .galery-set__item {
-  &:not(:last-child) {
-    margin-bottom: 30px;
-  }
+  margin-bottom: 30px;
+  background-color: var(--header-hero-color);
   @media screen and (min-width: 768px) {
-    flex-basis: calc(100% / 3 - 30px);
     margin: 15px;
-    background: #ffffff;
+    &:nth-child(-n + 2) {
+      max-width: 354px;
+    }
   }
 }
 .galery-set__link {
@@ -58,6 +59,10 @@
   padding-right: 24px;
   padding-left: 24px;
   border: 1px solid #eeeeee;
+
+  .galery-set__item:nth-child(-n + 2) & {
+    height: 146px;
+  }
 }
 .galery-set__title {
   font-weight: 700;
