--- a/css/main.css
+++ b/css/main.css
@@ -90,7 +90,7 @@ ul {
   padding-bottom: 60px;
 }
 
-@media screen and (min-width: 1600px) {
+@media screen and (min-width: 1200px) {
   .section {
     padding-top: 94px;
     padding-bottom: 94px;
@@ -198,17 +198,11 @@ ul {
       -ms-flex-align: center;
           align-items: center;
   height: 60px;
-  padding-top: 16px;
-  padding-bottom: 16px;
-  padding-right: 23px;
 }
 
 @media screen and (min-width: 768px) {
   .header__container {
     height: 80px;
-    padding-top: 26px;
-    padding-bottom: 26px;
-    padding-right: 15px;
   }
 }
 
@@ -405,6 +399,13 @@ ul {
 
 .menu-container {
   position: fixed;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
   top: 0;
   left: 0;
   width: 100vw;
@@ -478,7 +479,7 @@ ul {
 
 /* Контакты */
 .contacts-set {
-  margin-top: 306px;
+  margin-top: auto;
   margin-bottom: 64px;
 }
 
@@ -525,9 +526,12 @@ ul {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  margin-left: -10px;
 }
 
-.social-mob__item:not(:first-child) {
+.social-mob__item {
   margin-left: 10px;
   padding-left: 10px;
   border-left: 1px solid rgba(33, 33, 33, 0.2);
@@ -909,31 +913,22 @@ ul {
             align-items: baseline;
     -ms-flex-wrap: wrap;
         flex-wrap: wrap;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
-    padding-left: 76px;
-    padding-right: 89px;
+    -ms-flex-pack: distribute;
+        justify-content: space-around;
   }
 }
 
 @media screen and (min-width: 1200px) {
   .container--footer {
-    padding-left: 15px;
-    padding-right: 15px;
     text-align: left;
-  }
-}
-
-@media screen and (min-width: 768px) {
-  .logo-address-container {
-    margin-right: 165px;
-    margin-bottom: 60px;
   }
 }
 
 @media screen and (min-width: 1200px) {
   .logo-address-container {
+    -webkit-box-flex: 1;
+        -ms-flex-positive: 1;
+            flex-grow: 1;
     margin-right: 70px;
     margin-bottom: 0;
   }
@@ -969,13 +964,13 @@ ul {
 }
 
 .join {
-  padding-top: 60px;
-  padding-bottom: 60px;
+  margin-top: 60px;
+  margin-bottom: 60px;
 }
 
 @media screen and (min-width: 768px) {
   .join {
-    padding: 0;
+    margin: 0;
   }
 }
 
@@ -989,6 +984,12 @@ ul {
   color: var(--text-fifth-color);
 }
 
+@media screen and (min-width: 480px) {
+  .sign-form {
+    margin-top: 60px;
+  }
+}
+
 @media screen and (min-width: 1200px) {
   .sign-form {
     display: -webkit-box;
@@ -998,6 +999,7 @@ ul {
         -ms-flex-align: end;
             align-items: flex-end;
     margin-left: 93px;
+    margin-top: 0;
   }
 }
 
@@ -1438,8 +1440,7 @@ ul {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  margin-right: -8px;
-  margin-bottom: 40px;
+  margin-bottom: -15px;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
   -webkit-box-pack: start;
@@ -1449,16 +1450,10 @@ ul {
 
 @media screen and (min-width: 768px) {
   .exemples-set {
-    margin-bottom: 30px;
+    margin-bottom: 0;
     -webkit-box-pack: center;
         -ms-flex-pack: center;
             justify-content: center;
-  }
-}
-
-@media screen and (min-width: 1200px) {
-  .exemples-set {
-    margin-bottom: 50px;
   }
 }
 
@@ -1508,17 +1503,25 @@ ul {
 }
 
 .galery-set {
+  margin-top: 40px;
   margin-bottom: -30px;
 }
 
 @media screen and (min-width: 768px) {
   .galery-set {
+    margin: -15px;
+    margin-top: 30px;
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
     -ms-flex-wrap: wrap;
         flex-wrap: wrap;
-    margin: -15px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .galery-set {
+    margin-top: 50px;
   }
 }
 
@@ -1530,14 +1533,19 @@ ul {
 @media screen and (min-width: 768px) {
   .galery-set__item {
     margin: 15px;
+    -ms-flex-preferred-size: calc(100% / 2 - 30px);
+        flex-basis: calc(100% / 2 - 30px);
   }
-  .galery-set__item:nth-child(-n + 2) {
-    max-width: 354px;
+}
+
+@media screen and (min-width: 1200px) {
+  .galery-set__item {
+    -ms-flex-preferred-size: calc(100% / 3 - 30px);
+        flex-basis: calc(100% / 3 - 30px);
   }
 }
 
 .galery-set__link {
-  display: block;
   text-decoration: none;
   -webkit-transition: -webkit-box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: -webkit-box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -1545,8 +1553,20 @@ ul {
   transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1), -webkit-box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.galery-set__link:hover,
-.galery-set__link:focus {
+@media screen and (min-width: 768px) {
+  .galery-set__link {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    height: 100%;
+  }
+}
+
+.galery-set__link:hover, .galery-set__link:focus {
   -webkit-box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
           box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
 }
@@ -1594,8 +1614,12 @@ ul {
   border: 1px solid #eeeeee;
 }
 
-.galery-set__item:nth-child(-n + 2) .galery-set__wraper {
-  height: 146px;
+@media screen and (min-width: 768px) {
+  .galery-set__wraper {
+    -webkit-box-flex: 1;
+        -ms-flex-positive: 1;
+            flex-grow: 1;
+  }
 }
 
 .galery-set__title {
