--- a/sass/components/_exemples-set.scss
+++ b/sass/components/_exemples-set.scss
@@ -1,18 +1,13 @@
 .exemples-set {
   display: flex;
-  margin-right: -8px;
-  margin-bottom: 40px;
+  margin-bottom: -15px;
   flex-wrap: wrap;
 
   justify-content: flex-start;
 
   @media screen and (min-width: 768px) {
-    margin-bottom: 30px;
+    margin-bottom: 0;
     justify-content: center;
-  }
-
-  @media screen and (min-width: 1200px) {
-    margin-bottom: 50px;
   }
 }
 .exemples-set__item {
