--- a/sass/components/_galery-set.scss
+++ b/sass/components/_galery-set.scss
@@ -1,31 +1,48 @@
 .galery-set {
+  margin-top: 40px;
   margin-bottom: -30px;
+
   @media screen and (min-width: 768px) {
+    margin: -15px;
+    margin-top: 30px;
     display: flex;
     flex-wrap: wrap;
-    margin: -15px;
+  }
+
+  @media screen and (min-width: 1200px) {
+    margin-top: 50px;
   }
 }
 .galery-set__item {
   margin-bottom: 30px;
   background-color: var(--header-hero-color);
+
   @media screen and (min-width: 768px) {
     margin: 15px;
-    &:nth-child(-n + 2) {
-      max-width: 354px;
-    }
+    flex-basis: calc(100% / 2 - 30px);
+  }
+
+  @media screen and(min-width: 1200px) {
+    flex-basis: calc(100% / 3 - 30px);
   }
 }
 .galery-set__link {
-  display: block;
   text-decoration: none;
   transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+  @media screen and (min-width: 768px) {
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+  }
+
+  &:hover,
+  &:focus {
+    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
+      1px 4px 6px rgba(0, 0, 0, 0.16);
+  }
 }
-.galery-set__link:hover,
-.galery-set__link:focus {
-  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
-    1px 4px 6px rgba(0, 0, 0, 0.16);
-}
+
 .galery-set__wrap {
   position: relative;
   overflow: hidden;
@@ -60,8 +77,8 @@
   padding-left: 24px;
   border: 1px solid #eeeeee;
 
-  .galery-set__item:nth-child(-n + 2) & {
-    height: 146px;
+  @media screen and (min-width: 768px) {
+    flex-grow: 1;
   }
 }
 .galery-set__title {
