--- a/css/main.css
+++ b/css/main.css
@@ -477,7 +477,7 @@ ul {
   color: var(--text-third-color);
 }
 
-/* Контакты */
+/* Контакты меню*/
 .contacts-set {
   margin-top: auto;
   margin-bottom: 64px;
