--- a/sass/components/_mobile-menu.scss
+++ b/sass/components/_mobile-menu.scss
@@ -64,7 +64,7 @@
   color: var(--text-third-color);
 }
 
-/* Контакты */
+/* Контакты меню*/
 .contacts-set {
   margin-top: auto;
   margin-bottom: 64px;
